# tasktracker

./: .gitignore  LICENSE  README.rst  manage.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
tasktracker/: asgi.py  settings.py  urls.py  wsgi.py
