[tool.poetry]
name = "tasktracker"
version = "2022.11.dev"
description = "training django project (educational purpose)"
authors = [
    "Serhii Horodilov <sgorodil@gmail.com>"
]
maintainers = [
    "Serhii Horodilov <sgorodil@gmail.com>"
]
readme = "README.rst"
repository = "https://github.com/edu-python-course/tasktracker"
keywords = [
    "python",
    "django",
    "web",
    "todo",
    "app",
    "educational",
    "tutorial",
    "training"
]
classifiers = [
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.1",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
